<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.caloriemate.fragment.HomeFragment"
        android:label="@string/nav_home"/>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.caloriemate.fragment.SearchFragment"
        android:label="@string/nav_search"/>

    <fragment
        android:id="@+id/logFragment"
        android:name="com.example.caloriemate.fragment.LogFragment"
        android:label="@string/nav_log"/>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.caloriemate.fragment.ProfileFragment"
        android:label="@string/nav_profile"/>

</navigation>